--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     @font-face {
       font-family: Outfit;
-      src: local ('Outfit')
-                  url('https://fonts.google.com/specimen/Outfit') format('truetype');
+      src: url('https://fonts.google.com/specimen/Outfit') format('truetype') local('Outfit');
     }
 
     body{
@@ -77,16 +76,16 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <img class="card-img-top" src="./images/image-qr-code.png">
-      <div class="card-body">
+  <div  role= "container" class="container">
+    <div role="maincard" class="card">
+      <img class="card-img-top" src="./images/image-qr-code.png" alt="qr-code">
+      <div role="cardbody" class="card-body">
         <p id="title">Improve your front-end skills by building projects</h1>
         <p id="bodycard">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
   </div>
-  <div class="attribution">
+  <div role="watermark" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/rivaldyava01">Rivaldy Avianto</a>.
   </div>
