--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
   </style>
 </head>
 <body>
-  <div  role= "container" class="container">
-    <div role="maincard" class="card">
+  <div  role= "landmark" class="container">
+    <div role="main" class="card">
       <img class="card-img-top" src="./images/image-qr-code.png" alt="qr-code">
-      <div role="cardbody" class="card-body">
+      <div role="article" class="card-body">
         <p id="title">Improve your front-end skills by building projects</h1>
         <p id="bodycard">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
   </div>
-  <div role="watermark" class="attribution">
+  <div role="article" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/rivaldyava01">Rivaldy Avianto</a>.
   </div>
