--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   </style>
 </head>
 <body>
-  <div  role= "landmark" class="container">
-    <div role="main" class="card">
+  <div  role= "main" class="container">
+    <div role="group" class="card">
       <img class="card-img-top" src="./images/image-qr-code.png" alt="qr-code">
-      <div role="article" class="card-body">
+      <div role="dialog" class="card-body">
         <p id="title">Improve your front-end skills by building projects</h1>
         <p id="bodycard">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
