--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   </style>
 </head>
 <body>
-  <div  role= "main" class="container">
-    <div role="group" class="card">
+  <div  role= "article" class="container">
+    <div role="main" class="card">
       <img class="card-img-top" src="./images/image-qr-code.png" alt="qr-code">
       <div role="dialog" class="card-body">
         <p id="title">Improve your front-end skills by building projects</h1>
@@ -85,7 +85,7 @@
       </div>
     </div>
   </div>
-  <div role="article" class="attribution">
+  <div role="main" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/rivaldyava01">Rivaldy Avianto</a>.
   </div>
