--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div  role= "article" class="container">
     <div role="main" class="card">
       <img class="card-img-top" src="./images/image-qr-code.png" alt="qr-code">
-      <div role="dialog" class="card-body">
+      <div role="article" class="card-body">
         <p id="title">Improve your front-end skills by building projects</h1>
         <p id="bodycard">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
